--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/code-quizz-db
-spring.datasource.username=root
-spring.datasource.password=secret
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-
-spring.output.ansi.enabled=ALWAYS 
+<lombok.version>1.18.20</lombok.version>
