Era fixe os beans funcionarem

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+quarkus.datasource.db-kind=postgresql 
+quarkus.datasource.username=root
+quarkus.datasource.password=secret
+quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/code-quizz-db
+quarkus.datasource.jdbc.max-size=16
+quarkus.arc.enabled=true
 <lombok.version>1.18.20</lombok.version>
