maven lifecycle up to install is working, site and deploy still not functional

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.datasource.username=username
 quarkus.datasource.password=password
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/code-quizz-db
 quarkus.datasource.jdbc.max-size=16
-quarkus.arc.enabled=true
+#quarkus.arc.enabled=true
 quarkus.http.port=8081
 quarkus.hibernate-orm.database.generation = drop-and-create
 <lombok.version>1.18.20</lombok.version>
